# aedat

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
.github/workflows/: build_wheels.yml  install_dependencies.py
flatbuffers/: events.fbs  frame.fbs  imus.fbs  ioheader.fbs  triggers.fbs
manylinux/: Dockerfile
scripts/: example.py  example_with_comments.py
src/: aedat.rs  aedat_core.rs  base.rs  events_generated.rs  frame_generated.rs  imus_generated.rs  ioheader_generated.rs  lib.rs  triggers_generated.rs
windows/: Vagrantfile
