[package]
name = "aedat"
version = "2.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "aedat"
crate-type = ["cdylib"]

[dependencies]
flatbuffers = "24.3.25"
lz4 = "1.24.0"
ndarray = "0.15.6"
numpy = "0.21.0"
pyo3 = {version = "0.21.2", features = ["extension-module"]}
roxmltree = "0.20.0"
zstd = "0.13.1"

[profile.release]
lto = true
codegen-units = 1
