[project]
name = "aedat"
description = "A fast AEDAT4 decoder with an underlying Rust implementation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "International Centre for Neuromorphic Systems"},
    {name = "Alexandre Marcireau"},
]
version = "2.1.0"
requires-python = ">=3.8"
dependencies = ["numpy>=1.24"]

[project.urls]
homepage = "https://github.com/neuromorphicsystems/aedat/"
repository = "https://github.com/neuromorphicsystems/aedat/"
documentation = "https://github.com/neuromorphicsystems/aedat/"

[build-system]
requires = ["maturin==1.5.1", "numpy>=1.24"]
build-backend = "maturin"
