[project]
name = "aedat"
description = "A fast AEDAT4 decoder with an underlying Rust implementation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "International Centre for Neuromorphic Systems"},
    {name = "Alexandre Marcireau"},
]
requires-python = ">=3.9"
dependencies = ["numpy>=1.26"]
version = "2.2.0"

[project.urls]
homepage = "https://github.com/neuromorphicsystems/aedat/"
repository = "https://github.com/neuromorphicsystems/aedat/"
documentation = "https://github.com/neuromorphicsystems/aedat/"

[build-system]
requires = ["maturin==1.7.4", "numpy>=1.26"]
build-backend = "maturin"
